<resources>
    <string name="app_name">My Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="label_main">My Nanodegree Apps</string>

    <!-- App names -->
    <string name="btn_app_spotify">Spotify Streamer</string>
    <string name="btn_app_scores">Scores App</string>
    <string name="btn_app_library">Library App</string>
    <string name="btn_app_build">Build It Bigger</string>
    <string name="btn_app_xyz">XYZ Reader</string>
    <string name="btn_app_capstone">Capstone</string>

</resources>
